leaflet 2.0.0.9000
--------------------------------------------------------------------------------

BUG FIXES

* Default marker icon locations will now use unpkg.com instead of the leaflet cdn when using https or file protocols. (#544)
* `.leaflet-map-pane` `z-index` switched to 'auto'. Allows for map panes to appear above the map if they appear later in the dom. (#537)
* Use correct Leaflet.js scale control remove method (#547)


leaflet 2.0.0
--------------------------------------------------------------------------------

BREAKING CHANGES

* Update to latest leaflet.js v1.3.1 (#453, 314616f)  Please see http://leafletjs.com/reference-1.3.0.html for the latest documentation

* All plugins updated to versions compatible with leaflet > 1.0 (#458)

    - jQuery, https://github.com/jquery/jquery
    - Leaflet (JavaScript library), https://github.com/Leaflet/Leaflet
    - Leaflet Providers, https://github.com/leaflet-extras/leaflet-providers
    - leaflet-measure, https://github.com/ljagis/leaflet-measure
    - Leaflet.Terminator, https://github.com/joergdietrich/Leaflet.Terminator
    - Leaflet.SimpleGraticule, https://github.com/ablakey/Leaflet.SimpleGraticule
    - Leaflet.MagnifyingGlass, https://github.com/bbecquet/Leaflet.MagnifyingGlass
    - Leaflet.MiniMap, https://github.com/Norkart/Leaflet-MiniMap
    - Leaflet.awesome-markers, https://github.com/lvoogdt/Leaflet.awesome-markers
    - Leaflet.EasyButton, https://github.com/CliffCloud/Leaflet.EasyButton/
    - Proj4Leaflet, https://github.com/kartena/Proj4Leaflet
    - leaflet-locationfilter, https://github.com/kajic/leaflet-locationfilter
    - leaflet-omnivore, https://github.com/mapbox/leaflet-omnivore
    - topojson, https://github.com/topojson/topojson

* Leaflet.label (https://github.com/Leaflet/Leaflet.labelExtension)

    - `L.Label` has been adopted within Leaflet.js to `L.Tooltip`
    - Tooltips are now displayed with default Leaflet.js styling