@@ -126,6 +126,7 @@ export(leafletMap)
 export(leafletOptions)
 export(leafletOutput)
 export(leafletProxy)
+export(leafletSizingPolicy)
 export(makeAwesomeIcon)
 export(makeIcon)
 export(mapOptions)
